# qcoro

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  QCoroConfig.cmake.in  QCoroMacros.cmake  README.md  config.cmake.in  config.h  mkdocs.yml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-docker-images.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  generate-matrix.py  unit_tests_results.yml  update-docs.yml  update-pages.yml
.reuse/: dep5
cmake/: AddQCoroLibrary.cmake  CheckAtomic.cmake  CheckQtFeature.cmake  DetectAndroidNDKVersion.cmake  ECMGeneratePriFile.cmake  ECMQtDeclareLoggingCategory.cmake  ECMQtDeclareLoggingCategory.cpp.in  ECMQueryQt.cmake  FindLiburing.cmake  GenerateHeaders.cmake  GenerateModuleConfigFile.cmake  HasCompatibleStlAbi.cmake  QCoroFindQt.cmake  QCoroModuleConfig.cmake.in
docker/: Dockerfile  Dockerfile.clang  Dockerfile.gcc  install-qt.sh
docs/: .pages  building-and-using.md  changelog.md  index.md  install.md  macros.py  news.md  release-checklist.md
docs/about/: license.md
docs/coroutines/: .pages  coawait.md  qt-vs-coawait.md  reading.md
docs/examples/: qdbus.cpp  qfuture.cpp  qnetworkreply.cpp  qprocess.cpp  qtcpserver.cpp  qtcpsocket.cpp  qthread.cpp
docs/reference/: .pages  coro.md  qabstractsocket.md  qdbuspendingcall.md  qdbuspendingreply.md  qfuture.md  qiodevice.md  qlocalsocket.md  qnetworkreply.md  qprocess.md  qtcpserver.md  qtimer.md  task.md  using.md
docs/stylesheets/: doctable.css
examples/: CMakeLists.txt
examples/background-task/: CMakeLists.txt  main.cpp
examples/basics/: CMakeLists.txt  await-async-string.cpp  await-sync-string.cpp
examples/chained/: CMakeLists.txt  main.cpp
examples/dbus/: CMakeLists.txt
examples/dbus/common/: CMakeLists.txt  dbusserver.cpp  dbusserver.h
qcoro/: CMakeLists.txt  QCoroCoroConfig.cmake.in  QCoroMacros.cmake  asyncgenerator.h  coro.h  coroutine.h  dbus.h  dialog.h  error.h  expected.h  future.h  generator.h  iodevice.cpp  iodevice.h  macros.h  network.cpp  network.h  qcoro-config.h.in  qcoro.h  qcoroabstractsocket.h  qcoroasyncgenerator.h  qcorocancellabletask.h  qcorodetachedtask.h  qcorofwd.h  qcorogenerator.h  qcoroiodevice.h  qcorolazytask.h  qcorolocalsocket.h  qcoronetworkreply.cpp  qcoronetworkreply.h  qcoroprocess.cpp  qcoroprocess.h  qcorosignal.h  qcorotask.h  qcorotcpserver.cpp  qcorotcpserver.h  task.cpp  task.h  timer.h  waitoperationbase_p.h
qcoro/asyncsql/: CMakeLists.txt  driverpluginloader.cpp  driverpluginloader_p.h  qcoroasyncsqldatabase.cpp  qcoroasyncsqldatabase.h  qcoroasyncsqldriver.cpp  qcoroasyncsqldriver.h  qcoroasyncsqldriver_p.h  qcoroasyncsqldriverplugin.cpp  qcoroasyncsqldriverplugin_p.h  qcoroasyncsqlnulldriver.cpp  qcoroasyncsqlnulldriver_p.h  qcoroasyncsqlnullresult_p.h  qcoroasyncsqlquery.cpp  qcoroasyncsqlquery.h  qcoroasyncsqlresult.cpp  qcoroasyncsqlresult.h  qcoroasyncsqlresult_p.h
qcoro/asyncsql/drivers/: CMakeLists.txt
qcoro/asyncsql/drivers/psql/: CMakeLists.txt  main.cpp  psql.json  psql_driver.cpp  psql_driver.h  psql_driver_p.h  psql_result.cpp  psql_result.h  psql_types.cpp  psql_types.h  utils.cpp  utils.h
qcoro/bits/: cancellation.h  features.h  promisebase.h  result.h  taskawaiterbase.h  taskfinalsuspend.h
qcoro/core/: CMakeLists.txt  QCoroCoreConfig.cmake.in  future.h  iodevice.h  qcorocore-config.h.in  qcorocore.h  qcorofuture.h  qcoroiodevice.cpp  qcoroiodevice.h  qcoroiodevice_p.cpp  qcoroiodevice_p.h  qcoroprocess.cpp  qcoroprocess.h  qcorosignal.h  qcorothread.cpp  qcorothread.h  qcorotimer.cpp  qcorotimer.h  timer.h
qcoro/core/impl/: isqprivatesignal.h
qcoro/dbus/: CMakeLists.txt  QCoroDBusConfig.cmake.in  dbus.cpp  dbus.h  qcorodbus.h  qcorodbuspendingcall.cpp  qcorodbuspendingcall.h  qcorodbuspendingreply.h
qcoro/impl/: connect.h  lazytask.h  task.h  taskawaiterbase.h  taskbase.h  taskfinalsuspend.h  taskpromise.h  taskpromisebase.h  waitfor.h  waitoperationbase.h
qcoro/io/: CMakeLists.txt  ioengine.cpp  ioengine_iouring.cpp  ioengine_p.h  qcoroio.h
qcoro/io/io_uring/: CMakeLists.txt  iouring_engine.cpp  iouring_engine.h
qcoro/network/: CMakeLists.txt  QCoroNetworkConfig.cmake.in  network.h  qcoroabstractsocket.cpp  qcoroabstractsocket.h  qcorolocalsocket.cpp  qcorolocalsocket.h  qcoronetwork-config.h.in  qcoronetwork.h  qcoronetworkreply.cpp  qcoronetworkreply.h  qcorosocketnotifier.cpp  qcorosocketnotifier.h  qcorotcpserver.cpp  qcorotcpserver.h
qcoro/qml/: CMakeLists.txt  qcoroqml.cpp  qcoroqml.h  qcoroqmltask.cpp  qcoroqmltask.h
qcoro/quick/: CMakeLists.txt  qcoroimageprovider.cpp  qcoroimageprovider.h
qcoro/test/: CMakeLists.txt  qcorotest.h
qcoro/webengine/: CMakeLists.txt  qcorowebenginepage.cpp  qcorowebenginepage.h
qcoro/websockets/: CMakeLists.txt  qcorowebsocket.cpp  qcorowebsocket.h  qcorowebsockets.h  qcorowebsocketserver.cpp  qcorowebsocketserver.h
qcoro/wrappers/: qiodevice.h  qprocess.h
tests/: CMakeLists.txt  asyncgenerator.cpp  cz.dvratil.qcorodbustest.xml  generator.cpp  qcoroabstractsocket.cpp  qcoroasyncgenerator.cpp  qcoroasyncsql.cpp  qcoroasyncsqlbase.cpp  qcoroasyncsqlbase.h  qcoroasyncsqlpsql.cpp  qcorocancellabletask.cpp  qcorogenerator.cpp  qcoroimageprovider-qt5-lsan.supp  qcoroimageprovider.cpp  qcoroiodevice.cpp  qcoroiodevice_macros.h  qcorolazytask.cpp  qcorolocalsocket.cpp  qcoronetworkreply.cpp  qcoroprocess.cpp  qcoroqmltask.cpp  qcorosignal.cpp  qcorosocketnotifier.cpp  qcorotask.cpp  qcorotcpserver.cpp  qcorothread.cpp  qcorowaitfor.cpp  qcorowebenginepage.cpp  qcorowebsocket.cpp  qcorowebsocketserver.cpp  qdbuspendingcall.cpp  qdbuspendingreply.cpp  qfuture.cpp  qnetworkreply.cpp  qprocess.cpp  qtimer.cpp  task.cpp  testconstraints.cpp  testdbusserver.cpp  testdbusserver.h  (+7 more)
tests/io/: CMakeLists.txt  iouringengine.cpp
tests/testlibs/: CMakeLists.txt  cz.dvratil.qcorodbustest.xml  testdbusserver.cpp  testdbusserver.h  testhttpserver.h  testloop.cpp  testloop.h  testmacros.h  testobject.cpp  testobject.h  testwsserver.cpp  testwsserver.h
(+54 files in other folders)
